# erdos2021-project

./: .gitignore  Bert.py  MeDAL Abbreviation Statistics and Reduction.ipynb  Medal LSTM Testing.ipynb  README.md  compile.sh  pyproject.toml  sample_output.txt
bert/: bert.ipynb  model.py  preprocess.py  token.py  train.py
datasets/: data.py
datasets/adam/: label_number.py  label_numbers.txt  train_2500_sort_AB_Exp.txt  valid_adam.txt
datasets/medal/: data.py
engine/: main.py  run_preprocess.py
engine/preprocess/: data_subset.py  extract_abstracts.py  extract_mimic.py  extract_pubmed.py  identify_longforms.py  prepare_dictionary.py  preprocess_superclass.py  preprocessing.py  replace_abstracts.py  replace_longforms.py  sample_dataset.py  temp.ipynb  tokenize_abstracts.py  tokenize_text.py
engine/sampling/: temp.ipynb
engine/utils/: LSTM.py  LSTM_SA.py  LSTM_loader.py  electra_loader.py  load_LSTM_pretrained.py  preprocess_utils.py  preprocessing.py  temp.ipynb  text_processing.py  wrapper_utils.py
engine/wrappers/: electra_wrapper.py  lstm_sa_wrapper.py  wrapper.py
figures/: EightAbbr.ipynb  ElectraSmall_2Abbr.txt  ElectraSmall_EightAbbr.txt  ElectraSmall_EightAbbr_OldLoc.txt  ElectraSmall_TwoAbbr_CLS.txt  ElectraSmall_TwoAbbr_LR2.txt  ElectraSmall_TwoAbbr_LR4.txt  ElectraSmall_TwoAbbr_LR4_old_locations.txt  LearningRate4_TwoAbbr_BERT.txt  LearningRate4_TwoAbbr_Electra.txt  TwoAbbr.ipynb  figure.ipynb
tests/: acc_test.py
tests/preprocess/: temp.ipynb  test_identify_longforms.py  test_replace_longforms.py
tests/utils/: dummy_note_replaced.txt  (+2 more)
(+2 files in other folders)
